forgot password added, image zooming, invalid password not restart the counter..

--- a/views/admin/Products/product.ejs
+++ b/views/admin/Products/product.ejs
@@ -115,7 +115,7 @@
             </a>
           </li>
           <li>
-            <a class="nav-link" href="pages/tables/basic-table.html">
+            <a class="nav-link" href="/admin/salesReport">
               <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
             </a>
           </li>
