--- a/views/users/resetPassword.ejs
+++ b/views/users/resetPassword.ejs
@@ -38,8 +38,12 @@
                       <div class="row gy-3 overflow-hidden">
                         <div class="col-12">
                           <div class="form-floating mb-3">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
-                            <label for="email" class="form-label">Email</label>
+                            <input type="password" class="form-control" name="password" id="password" placeholder="name@example.com" required>
+                            <label for="password" class="form-label">New Password</label>
+                          </div>
+                          <div class="form-floating mb-3">
+                            <input type="password" class="form-control" name="conformPassword" id="consformPassword" placeholder="name@example.com" required>
+                            <label for="conformPassword" class="form-label">Conformation Password</label>
                           </div>
                         </div>
                         <div class="col-12">
@@ -68,6 +72,7 @@
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
   <script>
 
@@ -84,11 +89,21 @@
         }
 
         try {
-            const response = await axios.post('/forgot', formValues)
+            const response = await axios.post('/resetPassword', formValues)
             if(response.data.success){
-                window.location.href = '/forgotOtp'
+                Swal.fire({
+                    icon:"success",
+                    titele:"success",
+                    text:response.data.message
+                }).then(()=>{
+                    window.location.href = '/login'
+                })
             }else{
-                console.log('pottiiiii');
+                Swal.fire({
+                    icon:"error",
+                    titele:"error",
+                    text:response.data.message
+                })
             }
         } catch (error) {
             console.log(error.message);
