--- a/views/admin/Category/deletedCategory.ejs
+++ b/views/admin/Category/deletedCategory.ejs
@@ -108,7 +108,7 @@
                         </a>
                       </li>
                       <li>
-                        <a class="nav-link" href="pages/tables/basic-table.html"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
+                        <a class="nav-link" href="/admin/salesReport"> <button type="button" class="btn btn-inverse-dark btn-rounded w-100 ">Sales <i class="mdi mdi-sale"></i> </button>
                         </a>
                       </li>
                       <li>
