--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -386,9 +386,16 @@
 						<button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
 							<i class="zmdi zmdi-search"></i>
 						</button>
+						<form method="GET" action="/products">
 						<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search" placeholder="Search">
+					</form>
 						<!-- <input type="text" name="search" placeholder="Search products...">
 						<button type="submit">Search</button> -->
+						<!-- <form method="GET" action="/products">
+							<input type="text" class="form-control" placeholder="Search User name, email" name="search">
+							<button type="submit" class="btn btn-inverse-dark btn-fw">Search</button>
+						</form> -->
+						
 					</div>
 				</div>
 
